
SVN
-------------------------------

XML:   Resolved issue CASTOR-1678 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with code generation for choices used in extension hierarchies.
       Details: http://jira.codehaus.org/browse/CASTOR-1678
       (Werner - 20061109)
       
XML:   Resolved issue CASTOR-1671 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update CTF document and merge CTFDoc.pdf into ctf.xml
       Details: http://jira.codehaus.org/browse/CASTOR-1671
       (Edward - 20061108)

XML:   Resolved issue CASTOR-1677 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       XML code generator now uses 'java.util.List' as signature type for 'j2' collections.
       Details: http://jira.codehaus.org/browse/CASTOR-1677
       (Werner - 20061108)

XML:   Resolved issue CASTOR-1680 using contribution from Pawel Pesz [castor@insert.net.pl]
       Fixed issue with incorrect constants in AbstractMappingLoader.
       Details: http://jira.codehaus.org/browse/CASTOR-1680
       (Ralf - 20061106)

XML:   Resolved issue CASTOR-384 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for 'pattern' facet for <xsd:decimal>.
       Details: http://jira.codehaus.org/browse/CASTOR-384
       (Werner - 20061102)

XML:   Resolved issue CASTOR-1675 using contribution from Eric Wittmann [wittmann@snet.net]
       Fixed problem with SchemaWriter not serializing anyAttribute child of a complexType.
       Details: http://jira.codehaus.org/browse/CASTOR-1675
       (Werner - 20061102)

XML:   Resolved issue CASTOR-1670 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add to CTF ability to specify failure step.
       Details: http://jira.codehaus.org/browse/CASTOR-1670
       (Edward - 20061030)

XML:   Resolved issue CASTOR-1615 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added HTML docs about prepared statement pooling.